--- a/GlucoMan.Maui/MealsPage.xaml
+++ b/GlucoMan.Maui/MealsPage.xaml
@@ -4,25 +4,8 @@
              x:Class="GlucoMan.Maui.MealsPage"
              Title="Meals">
     <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
+        <Grid RowDefinitions="40,20,50,20,50,40,50,20,20,*"
+            ColumnDefinitions="*,*,*,*">
             <RadioButton Grid.Row="0" Grid.Column="0" Content="b.fast" x:Name="rdbIsBreakfast" 
                          CheckedChanged="rdb_CheckedChanged"/>
             <RadioButton Grid.Row="0" Grid.Column="1" Content="lunch" x:Name="rdbIsLunch" 
@@ -33,42 +16,49 @@
                          CheckedChanged="rdb_CheckedChanged"/>
 
             <Label Grid.Row="1" Grid.Column="0" Text="IdMeal" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="1" Text="Type of Meal" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="1" Text="Meal CHO" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Text="Accuracy" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="3" Text="" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtIdMeal" BackgroundColor="White" 
+            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtIdMeal" BackgroundColor="White" Margin="2,2,2,2" 
                    FontSize="Medium" HorizontalTextAlignment="End" IsReadOnly="true"/>
-            <Picker Grid.Row="2" Grid.Column="1" x:Name="cmbTypeOfMeal"  
-                    Title="Type of Meal" 
+            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtChoOfMeal" BackgroundColor="Aqua" Margin="2,2,2,2" 
+                   Keyboard="Numeric"  FontSize="Medium" HorizontalTextAlignment="End"
+                   TextChanged="txtChoOfMeal_TextChanged"/>
+            <Entry Grid.Row="2" Grid.Column="2" x:Name="txtAccuracyOfChoMeal" Margin="2,2,2,2" 
+                   Keyboard="Numeric" BackgroundColor="PaleGoldenrod" HorizontalTextAlignment="End"
+                   FontSize="Medium" />
+            <Picker Grid.Row="2" Grid.Column="3" x:Name="cmbAccuracyMeal" Margin="2,2,2,2" 
+                    HorizontalTextAlignment="End"
+                    ItemsSource="{Binding Common.QualitativeAccuracy}" 
+                    SelectedItem="{Binding NotSet, Mode=TwoWay}"
+                    BackgroundColor="PaleGoldenrod" FontSize="Small"/>
+
+            <Label Grid.Row="3" Grid.Column="0" Text="Type of Meal" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Text="Meal begin instant"  HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+
+            <Picker Grid.Row="4" Grid.Column="0" x:Name="cmbTypeOfMeal" Margin="2,2,2,2" 
                     HorizontalTextAlignment="End"
                     ItemsSource="{Binding Common.TypeOfMeal}" 
                     BackgroundColor="PaleGoldenrod"
                     SelectedIndexChanged="cmbTypeOfMeal_SelectedIndexChanged"
                     FontSize="Small" />
-            <Entry Grid.Row="2" Grid.Column="2" x:Name="txtAccuracyOfChoMeal" 
-                   Keyboard="Numeric" BackgroundColor="PaleGoldenrod" HorizontalTextAlignment="End"
-                   FontSize="Medium" />
-            <Picker Grid.Row="2" Grid.Column="3" x:Name="cmbAccuracyMeal"
-                    Title="Accuracy" HorizontalTextAlignment="End"
-                    ItemsSource="{Binding Common.QualitativeAccuracy}" 
-                    SelectedItem="{Binding NotSet, Mode=TwoWay}"
-                    BackgroundColor="PaleGoldenrod" FontSize="Small"/>
-
-            <Label Grid.Row="3" Grid.Column="0" Text="Meal CHO" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Text="Meal begin instant"  HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-
-            <Entry Grid.Row="4" Grid.Column="0" x:Name="txtChoOfMeal" BackgroundColor="Aqua"
-                   Keyboard="Numeric"  FontSize="Medium" HorizontalTextAlignment="End"
-                   TextChanged="txtChoOfMeal_TextChanged"/>
-            <DatePicker Grid.Row="4" Grid.Column="1" x:Name="dtpMealDateBegin" 
-                        BackgroundColor="PaleGreen" FontSize="Small" Format="yyyy-MM-dd" 
+            <DatePicker Grid.Row="4" Grid.Column="1" x:Name="dtpMealDateBegin" Margin="0,2,0,2" 
+                        BackgroundColor="PaleGreen" FontSize="Micro" Format="yyyy-MM-dd" 
                         HorizontalOptions="Center" />
-            <TimePicker Grid.Row="4" Grid.Column="2" x:Name="dtpMealTimeBegin" 
-                        BackgroundColor="PaleGreen" FontSize="Small" Format="HH:mm:ss" 
+            <TimePicker Grid.Row="4" Grid.Column="2" x:Name="dtpMealTimeBegin" Margin="0,2,0,2" 
+                        BackgroundColor="PaleGreen" FontSize="Micro" Format="HH:mm:ss" 
                         HorizontalOptions="Center" />
-            <Button Grid.Row="4" Grid.Column="3" Text="Defaults" x:Name="btnDefaults" Clicked="btnDefault_Click"></Button>
+            <Button Grid.Row="4" Grid.Column="3" Text="Defaults" Margin="2,2,2,2" 
+                    x:Name="btnDefaults" Clicked="btnDefault_Click"></Button>
 
+            <Entry Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" Margin="2,2,2,2"
+                   BackgroundColor="White" 
+                   FontSize="Medium" HorizontalTextAlignment="Start" IsReadOnly="false"/>
+
+            <Button Grid.Row="6" Grid.Column="0" Text="Save" x:Name="btnSave" Margin="2,2,2,2" 
+                    Clicked="btnSaveMeal_ClickAsync"></Button>
+            <Button Grid.Row="6" Grid.Column="1" Text="Now" x:Name="btnNowBegin" Margin="2,2,2,2" 
+                    Clicked="btnNowBegin_Click"></Button>
             <Grid Grid.Row="6" Grid.Column="2">
                 <Grid.RowDefinitions>
                     <RowDefinition />
@@ -77,18 +67,15 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Button Grid.Row="0" Grid.Column="0" Text="+" x:Name="btnAddMeal" Clicked="btnAddMeal_ClickAsync"></Button>
-                <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveMeal" Clicked="btnRemoveMeal_ClickAsync"></Button>
+                <Button Grid.Row="0" Grid.Column="0" Text="+" Margin="2,2,2,2" 
+                        x:Name="btnAddMeal" Clicked="btnAddMeal_ClickAsync"></Button>
+                <Button Grid.Row="0" Grid.Column="1" Text="-" Margin="2,2,2,2" 
+                        x:Name="btnRemoveMeal" Clicked="btnRemoveMeal_ClickAsync"></Button>
             </Grid>
+            <Button Grid.Row="6" Grid.Column="3" Text="Details" x:Name="btnShowThisMeal"  Margin="2,2,2,2" 
+                    Clicked="btnShowThisMeal_ClickAsync"></Button>
 
-            <Entry Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" BackgroundColor="White" 
-                   FontSize="Medium" HorizontalTextAlignment="Start" IsReadOnly="false"/>
-
-            <Button Grid.Row="6" Grid.Column="0" Text="Save" x:Name="btnSave" Clicked="btnSaveMeal_ClickAsync"></Button>
-            <Button Grid.Row="6" Grid.Column="1" Text="Now" x:Name="btnNowBegin" Clicked="btnNowBegin_Click"></Button>
-            <Button Grid.Row="6" Grid.Column="3" Text="Details" x:Name="btnShowThisMeal" Clicked="btnShowThisMeal_ClickAsync"></Button>
-
-            <StackLayout Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2" Orientation="Horizontal">
+            <HorizontalStackLayout Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2">
                 <CheckBox VerticalOptions="Start" x:Name="chkNowInAdd" IsChecked="True">
                     <CheckBox.Margin>
                         <OnPlatform x:TypeArguments="Thickness">
@@ -104,10 +91,10 @@
                         </TapGestureRecognizer>
                     </Label.GestureRecognizers>
                 </Label>
-            </StackLayout>
+            </HorizontalStackLayout>
 
             <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Text="Date and Time" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="2" Text="Carbohydrates" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="2" Text="CHO" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <ListView Grid.Row="9" Grid.ColumnSpan="4" x:Name="gridMeals" ItemsSource="{Binding}"
                       ItemSelected="OnGridSelectionAsync" >
@@ -116,12 +103,12 @@
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <Grid Margin="10">
+                                <Grid Margin="5">
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="18"/>
+                                        <RowDefinition Height="15"/>
                                     </Grid.RowDefinitions>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="0" Text="{Binding TimeBegin.DateTime}"/>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding Carbohydrates.Text}"/>
+                                    <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding TimeBegin.DateTime}"/>
+                                    <Label HorizontalTextAlignment="End" Grid.Column="1" Text="{Binding Carbohydrates.Text}"/>
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
