--- a/GlucoMan.Maui/Resources/Styles/Styles.xaml
+++ b/GlucoMan.Maui/Resources/Styles/Styles.xaml
@@ -32,6 +32,7 @@
         <Setter Property="Padding" Value="14,10"/>
         <Setter Property="MinimumHeightRequest" Value="44"/>
         <Setter Property="MinimumWidthRequest" Value="44"/>
+        <Setter Property="Margin" Value="5,5,5,5"/>
         <Setter Property="VisualStateManager.VisualStateGroups">
             <VisualStateGroupList>
                 <VisualStateGroup x:Name="CommonStates">
