--- a/GlucoMan.Maui/WeighFoodPage.xaml
+++ b/GlucoMan.Maui/WeighFoodPage.xaml
@@ -18,6 +18,7 @@
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
